test/types/bool/bradc/numBitsBytesDefault.good
numBitsBytesDefault.chpl:3: In function 'printSizes':
numBitsBytesDefault.chpl:4: error: 'bool' does not have a well-defined size
  numBitsBytesDefault.chpl:9: called as printSizes(type t = bool)
